--- a/NvidiaStoreChecker.csproj
+++ b/NvidiaStoreChecker.csproj
@@ -11,6 +11,8 @@
 
   <ItemGroup>
     <PackageReference Include="NAudio" Version="2.0.1" />
+    <PackageReference Include="System.CommandLine" Version="2.0.0-beta2.21617.1" />
+    <PackageReference Include="System.CommandLine.NamingConventionBinder" Version="2.0.0-beta2.21617.1" />
   </ItemGroup>
 
   <ItemGroup>
