--- a/NvidiaStoreChecker.csproj
+++ b/NvidiaStoreChecker.csproj
@@ -7,6 +7,8 @@
 	  <SelfContained>true</SelfContained>
 	  <IncludeAllContentForSelfExtract>true</IncludeAllContentForSelfExtract>
 	  <RuntimeIdentifier>win-x64</RuntimeIdentifier>
+	  <AssemblyVersion>0.2.0</AssemblyVersion>
+	  <FileVersion>0.2.0</FileVersion>
   </PropertyGroup>
 
   <ItemGroup>
